--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "css-loader": "^0.28.11",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "style-loader": "^0.20.3",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   }
